# otto

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  open-devcontainer.sh  otto.cabal
.claude/: settings.json
.devcontainer/: devcontainer.json  direnv-setup.sh  docker-compose.yml
.github/workflows/: ci.yml
app/: Main.hs
config/: sources.yaml.example
docs/: overview.md
src/Otto/: AI.hs  App.hs  Catalog.hs  Crawler.hs  Error.hs  Feed.hs  Logging.hs  Pipeline.hs  Sources.hs
src/Otto/AI/: Anthropic.hs  Cli.hs  Config.hs  Error.hs  Gemini.hs  Mock.hs  Provider.hs  Types.hs
src/Otto/AI/Anthropic/: Internal.hs
src/Otto/AI/Gemini/: Internal.hs
src/Otto/Catalog/: Config.hs  Error.hs  FileSystem.hs  Handle.hs  Render.hs  Types.hs
src/Otto/Crawler/: Config.hs  Error.hs  Handle.hs  Jina.hs  Mock.hs  Types.hs
src/Otto/Crawler/Jina/: Internal.hs
src/Otto/Feed/: Error.hs  Handle.hs  Http.hs  Types.hs
src/Otto/Sources/: Config.hs  Error.hs  File.hs  Types.hs
test/: Main.hs
test/Otto/: PipelineSpec.hs
test/Otto/AI/: AnthropicIntegrationSpec.hs  AnthropicSpec.hs  CliSpec.hs  GeminiIntegrationSpec.hs  GeminiSpec.hs  MockSpec.hs
test/Otto/Catalog/: FileSystemSpec.hs  RenderSpec.hs  SlugSpec.hs
test/Otto/Crawler/: JinaIntegrationSpec.hs  JinaSpec.hs  MockSpec.hs
test/Otto/Feed/: HttpSpec.hs
test/Otto/Sources/: FileSpec.hs
test/golden/anthropic/: request-simple-user.json  request-with-system.json  request-with-temperature.json
test/golden/catalog/: entry-escaped.md  entry-full.md  entry-minimal.md  failure-blocked.json  failure-network-error.json  slug-example-com.txt  slug-with-path.txt  slug-with-query.txt
test/golden/feed/: garbage.xml  sample-atom.xml  sample-rss.xml
test/golden/gemini/: request-simple-user.json  request-with-system.json  request-with-temperature.json
test/golden/sources/: missing-topic.yaml  valid.yaml
