cabal-version: 3.4
name: otto
version: 0.1.0.0
synopsis: Personal automation bot for research and blog management
description:
  Otto is a personal automation bot. It fetches web pages as canonical
  Markdown and queries multiple AI providers (Anthropic, Gemini) through
  a vendor-neutral interface. See CLAUDE.md for architecture and
  conventions.

homepage: https://github.com/ivelten/otto
bug-reports: https://github.com/ivelten/otto/issues
license: BSD-3-Clause
license-file: LICENSE
author: Ismael Carlos Velten
maintainer: ismaelcarlosvelten@gmail.com
copyright: 2026 Ismael Carlos Velten
category: Application
build-type: Simple
tested-with: ghc ==9.10.3
extra-doc-files:
  CHANGELOG.md
  CLAUDE.md
  README.md

common shared
  default-language: GHC2024
  default-extensions:
    DerivingStrategies
    DerivingVia
    OverloadedRecordDot
    OverloadedStrings
    StrictData

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Otto.AI
    Otto.AI.Anthropic
    Otto.AI.Anthropic.Internal
    Otto.AI.Cli
    Otto.AI.Config
    Otto.AI.Error
    Otto.AI.Gemini
    Otto.AI.Gemini.Internal
    Otto.AI.Mock
    Otto.AI.Provider
    Otto.AI.Types
    Otto.App
    Otto.Crawler
    Otto.Crawler.Config
    Otto.Crawler.Error
    Otto.Crawler.Handle
    Otto.Crawler.Jina
    Otto.Crawler.Jina.Internal
    Otto.Crawler.Mock
    Otto.Crawler.Types
    Otto.Error
    Otto.Logging

  build-depends:
    aeson ^>=2.2,
    base ^>=4.20,
    bytestring ^>=0.12,
    case-insensitive ^>=1.2,
    co-log ^>=0.6,
    http-client ^>=0.7,
    http-client-tls ^>=0.3,
    http-types ^>=0.12,
    mtl ^>=2.3,
    text ^>=2.1,
    time ^>=1.12,

executable otto
  import: shared
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base,
    co-log,
    http-client,
    http-client-tls,
    otto,
    text,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite otto-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Otto.AI.AnthropicIntegrationSpec
    Otto.AI.AnthropicSpec
    Otto.AI.CliSpec
    Otto.AI.GeminiIntegrationSpec
    Otto.AI.GeminiSpec
    Otto.AI.MockSpec
    Otto.Crawler.JinaIntegrationSpec
    Otto.Crawler.JinaSpec
    Otto.Crawler.MockSpec

  build-depends:
    aeson,
    base,
    bytestring,
    http-client,
    http-client-tls,
    otto,
    tasty ^>=1.5,
    tasty-golden ^>=2.3,
    tasty-hedgehog ^>=1.4,
    tasty-hunit ^>=0.10,
    text,
    time,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
